maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:5: error: '=' expected but ';' found.
def keepHandOnSideWall()={
^